--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,12 +6,16 @@
     background-color: #000;
     color: #fff;
     height: 30vh;
+
+    background-image: url("../img/banner-1440x300-1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .container{
     display: flex;
     justify-content: center;
-    height: 60vh;
+    height: auto;
     width: 100%;
     color: #fff;
 }
